# MCSR_Ranked_Companion

./: .env.example  .gitignore  AGENTS.md  API_RESEARCH_FINDINGS.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  MCSR_Ranked_API_Documentation.md  PLAN.md  README.md  SECURITY.md  VALIDATION_REPORT.md  app.py  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  vercel-deploy.yml
docs/: CACHE_SYSTEM.md  achievements-comparison.md
messages/: en.json  es.json  pt-BR.json  zh.json
public/: ads.txt  site.webmanifest
public/achievements/: README.md  sources.json
public/icons/: icons-minecraft-229.css
scripts/: create-icon.js  fetch-achievements.js  populate-achievements-from-wiki.js
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/[locale]/: layout.tsx  page.tsx
src/app/compare/: page.tsx
src/app/elo-timeline/: page.tsx
src/app/getting-started/: page.tsx
src/app/leaderboard/: page.tsx
src/app/live-match/: page.tsx
src/components/: index.ts  providers.tsx
src/constants/: rankSprite.ts
src/hooks/: useRankTier.ts
src/i18n/: LocaleProvider.tsx  config.ts  request.ts
src/lib/: site.ts
src/styles/: globals.css
src/types/: api.ts  rank.ts
src/utils/: ranks.ts
tests/: api-validation.ts
tests/utils/: achievements.test.ts  colors.test.ts  formatters.test.ts
(+105 files in other folders)
